<resources>
    <string name="app_name">Better World</string>

    <string name="easiest_way_to">Easiest way to </string>
    <string name="help_others"> help others</string>
    <string name="powered_by_retbing">Powered by Retbing</string>
    <string name="hello">Hello!</string>
    <string name="charities">Charities</string>
    <string name="homePageCardTitle">Change the world with your little help</string>
    <string name="target">Target:</string>

    <string name="btnDonate">Donate</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have account? </string>
    <string name="sign_in">Sign in</string>
    <string name="to_continue">to continue</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="dont_you_have_account">Don\'t you have account? </string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="or_login_with">Or Login With</string>
    <string name="google_logo">google_logo</string>

    <!--Choose Category Activity-->
    <string name="start_a_charity">Start a Charity</string>
    <string name="start_a_charity_detail">Choose the type of your charity program</string>
    <string name="next">Next</string>
    <string name="notifications">Notifications</string>
    <string name="start_a_charity_header">Complete your personal information to proceed this charity program</string>
    <string name="tv_1_page_1">Your Profession</string>
    <string name="tv_2_page_1">Name of Institutaion</string>
    <string name="tv_3_page_1">Social Media Account</string>
    <string name="tv_4_page_1">Address</string>

    <string name="tv_1_page_2">Title for This Program</string>
    <string name="tv_2_page_2">Who are the benefit recipients</string>
    <string name="tv_3_page_2">Target</string>
    <string name="tv_4_page_2">Deadline</string>
    <string name="previous">Previous</string>
    <string name="tv_1_page_4">Your Phone Number</string>
    <string name="successful">Successful!</string>
    <string name="successful_detail">Your charity program has been successfully created. Now you can check and maintain it in your ‘activity’ menu</string>
    <string name="home">Home</string>
    <string name="done">Done</string>
    <string name="tv_date_started">Date the program started</string>
    <string name="tv_date_ended">Date the program ended</string>
    <string name="error_format_invalid">Format Invalid</string>
    <string name="error_too_short">Too Short</string>
    <string name="tv_1_page_3">Description</string>
    <string name="tv_2_page_3">Upload a photo as a thumbnail</string>

    <string name="forgot_password_detail">Enter your email associated with your account and we’ll send an email with instruction to reset your password</string>
    <string name="submit_forgot_password">Submit</string>
    <string name="education">Education</string>
    <string name="health">Health</string>
    <string name="environment">Environment</string>
    <string name="animal">Animal</string>
    <string name="remaining">Remaining:</string>
    <string name="join">Join</string>
    <string name="donation_detail">Donation Detail</string>
    <string name="credit_card">Credit Card</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="paypal">PayPal</string>
    <string name="total">Total</string>
    <string name="thank_you">Thank You</string>
    <string name="donate_succesful">Your donation has been succeed and will be transfered soon to the needy</string>
    <string name="donate">Donate</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_changes">Save Changes</string>
    <string name="msg_token_fmt" />
    <string name="search">Search a charity</string>
</resources>