<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bw_green"
        >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:background="@drawable/ic_rectangle"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/gordita_medium"
                    android:text="@string/start_a_charity"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="300dp"
                    android:lineHeight="30dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gordita_regular"
                    android:text="@string/start_a_charity_detail"
                    android:textColor="@color/black"
                    android:textSize="16dp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <androidx.gridlayout.widget.GridLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:columnCount="2"
                        app:rowCount="4"
                        app:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_education"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="40dp"
                            android:layout_marginBottom="10dp"
                            android:textSize="45sp"
                            android:text="🎓"
                            android:background="@drawable/button_bg_charity_category"
                            android:layout_marginEnd="40dp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_health"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="🩺"
                            android:textSize="45sp"
                            android:background="@drawable/button_bg_charity_category" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:layout_marginLeft="15dp"
                            android:fontFamily="@font/gordita_regular"
                            android:text="@string/education"
                            android:layout_marginStart="15dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_gravity="center_horizontal"
                            android:fontFamily="@font/gordita_regular"
                            android:text="@string/health" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_environment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="45sp"
                            android:text="🌲"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/button_bg_charity_category" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_animal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="45sp"
                            android:text="😺"
                            android:background="@drawable/button_bg_charity_category" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:layout_marginLeft="7dp"
                            android:fontFamily="@font/gordita_regular"
                            android:text="@string/environment"
                            android:layout_marginStart="7dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_gravity="center_horizontal"
                            android:fontFamily="@font/gordita_regular"
                            android:text="@string/animal" />



                    </androidx.gridlayout.widget.GridLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="75dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_culture_arts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="45sp"
                            android:text="🎭"
                            android:background="@drawable/button_bg_charity_category" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gordita_regular"
                            android:layout_marginTop="10dp"
                            android:text="Culture &amp; Arts" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_bg_circle_green"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>