<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bw_green">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical">

            <include
                layout="@layout/app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"></include>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:translationZ="1dp"
                app:cardCornerRadius="22dp"
                app:cardElevation="14dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="14dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginLeft="14dp"
                        android:layout_marginEnd="14dp"
                        android:layout_marginRight="14dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gordita_medium"
                            android:text="Create new"
                            android:textColor="@color/bw_dark"
                            android:textSize="22sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gordita_medium"
                            android:text="Account"
                            android:textColor="@color/bw_dark"
                            android:textSize="22sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginLeft="14dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginEnd="14dp"
                        android:layout_marginRight="14dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                        android:clipToPadding="false">


                        <EditText xmlns:android="http://schemas.android.com/apk/res/android"
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/edit_texts_bg"
                            android:fontFamily="@font/gordita_regular"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:paddingHorizontal="16dp"
                            android:textColorHint="@color/bw_light_grey_darker"
                            android:textSize="14sp"></EditText>

                        <EditText xmlns:android="http://schemas.android.com/apk/res/android"
                            android:id="@+id/et_username"
                            android:inputType="text"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/edit_texts_bg"
                            android:fontFamily="@font/gordita_regular"
                            android:hint="@string/username"
                            android:paddingHorizontal="16dp"
                            android:textColorHint="@color/bw_light_grey_darker"
                            android:textSize="14sp"></EditText>

                        <EditText xmlns:android="http://schemas.android.com/apk/res/android"
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/edit_texts_bg"
                            android:fontFamily="@font/gordita_regular"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingHorizontal="16dp"
                            android:textColorHint="@color/bw_light_grey_darker"
                            android:textSize="14sp"></EditText>

                    </LinearLayout>


                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="14dp"
                        android:layout_marginLeft="14dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginEnd="14dp"
                        android:layout_marginRight="14dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/button_bg_blue"
                        android:backgroundTint="@color/bw_blue"
                        android:text="@string/create_account"
                        app:backgroundTint="@color/bw_blue"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="-60dp"
                android:translationZ="0dp"
                app:cardCornerRadius="22dp"
                app:cardElevation="14dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gordita_regular"
                            android:gravity="bottom"
                            android:text="@string/already_have_account"
                            android:textColor="#C8C8C8"
                            android:textSize="12sp"
                            android:layout_marginRight="4dp"/>

                        <TextView
                            android:id="@+id/tv_sign_in"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gordita_medium"
                            android:text="@string/sign_in"
                            android:textColor="@color/bw_blue"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
