<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_reset_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bw_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

    <include
        layout="@layout/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"></include>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="120dp"
        android:translationZ="1dp"
        app:cardCornerRadius="22dp"
        app:cardElevation="14dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="14dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gordita_medium"
                    android:text="Forgot"
                    android:textColor="@color/bw_dark"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gordita_medium"
                    android:text="Password?"
                    android:textColor="@color/bw_dark"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:lineHeight="25dp"
                    android:fontFamily="@font/gordita_regular"
                    android:text="@string/forgot_password_detail"
                    android:textColor="@color/bw_dark"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                android:clipToPadding="false">



                <EditText
                    android:id="@+id/et_email_for_fpassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_view_bg_grey"
                    android:fontFamily="@font/gordita_regular"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="16dp"
                    android:textColorHint="@color/bw_light_grey_darker"
                    android:textSize="14sp"/>

            </LinearLayout>


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_bg_blue"
                android:backgroundTint="@color/bw_blue"
                android:text="@string/submit_forgot_password"
                app:backgroundTint="@color/bw_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>